// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea snapshots > AcceptsTyping matches snapshot 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded border border-zinc-200 bg-white px-3 py-2 text-sm placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-zinc-800 dark:bg-zinc-950 dark:placeholder:text-zinc-400 dark:focus-visible:ring-zinc-300"
/>
`;

exports[`Textarea snapshots > Default matches snapshot 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded border border-zinc-200 bg-white px-3 py-2 text-sm placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-zinc-800 dark:bg-zinc-950 dark:placeholder:text-zinc-400 dark:focus-visible:ring-zinc-300"
/>
`;

exports[`Textarea snapshots > Disabled matches snapshot 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded border border-zinc-200 bg-white px-3 py-2 text-sm placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-zinc-800 dark:bg-zinc-950 dark:placeholder:text-zinc-400 dark:focus-visible:ring-zinc-300"
  disabled=""
  placeholder="Disabled textarea"
/>
`;

exports[`Textarea snapshots > DisabledPreventsInput matches snapshot 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded border border-zinc-200 bg-white px-3 py-2 text-sm placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-zinc-800 dark:bg-zinc-950 dark:placeholder:text-zinc-400 dark:focus-visible:ring-zinc-300"
  disabled=""
/>
`;

exports[`Textarea snapshots > WithLabel matches snapshot 1`] = `
<div
  class="grid w-full gap-1.5"
>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    for="message"
  >
    Your message
  </label>
  <textarea
    class="flex min-h-[80px] w-full rounded border border-zinc-200 bg-white px-3 py-2 text-sm placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-zinc-800 dark:bg-zinc-950 dark:placeholder:text-zinc-400 dark:focus-visible:ring-zinc-300"
    id="message"
    placeholder="Type your message here..."
  />
</div>
`;

exports[`Textarea snapshots > WithPlaceholder matches snapshot 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded border border-zinc-200 bg-white px-3 py-2 text-sm placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-zinc-800 dark:bg-zinc-950 dark:placeholder:text-zinc-400 dark:focus-visible:ring-zinc-300"
  placeholder="Type your message here..."
/>
`;
